# hypatia

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  rust-toolchain.toml
book/: book.toml
book/src/: 1-intro.md  2-installation.md  3-basic_usage.md  3.1-playing_a_wallpaper.md  3.2-wallpaper-features.md  SUMMARY.md
documentation/: README.md
documentation/book/: 2-installation.html  3-basic_usage.html  404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-3eca74e7.js  toc-89afdbc4.js  toc.html
documentation/src/: 1-intro.md  2-installation.md
examples/basic/: pipeline.kdl
examples/basic/src/: frag.glsl  vert.glsl
examples/bloom/: nop  pipeline.kdl
examples/bloom/src/: common.glsl  inv_map.glsl  out.glsl  post.glsl  sample.glsl  vert.glsl
examples/bloom/src/down/: 1.glsl  2.glsl  3.glsl
examples/bloom/src/up/: 1.glsl  2.glsl  3.glsl
hypatia/: Cargo.toml
hypatia/src/: app.rs  cli.rs  config.rs  fade.rs  main.rs  pipeline.rs  player.rs  util.rs  window.rs
hypatia/src/config/: v0_1.rs
hypatia/src/config/test/: basic.kdl
hypatia/src/pipeline/: texture.rs  uniforms.rs
hypatia/src/pipeline/texture/: image.rs  video.rs
mini-gl-bindings/: Cargo.toml  build.rs
mini-gl-bindings/src/: lib.rs  primitive.rs  shader.rs  texture.rs  vertex.rs
mini-log/: Cargo.toml
mini-log/src/: lib.rs
mpv-gl-renderer/: Cargo.toml
mpv-gl-renderer/src/: error.rs  ffi.rs  lib.rs  property.rs  render.rs  time.rs
mpv-gl-renderer/tests/: mpv_test.rs
