[package]
name = "hypatia"
version = "0.1.0"
edition = "2024"
description = "Live interactive shader and video wallpapers for Wayland"
license = "MIT OR Apache-2.0"

[package.metadata.deb]
name = "hypatia"
maintainer = "lilyyy411"
depends = "$auto, mpv"  # yes, that's it. all you need is mpv
assets = [
  ["../LICENSE*", "/usr/share/doc/hypatia", "644"],
  ["../README.md", "/usr/share/doc/hypatia/README.md", "644"],
  ["../documentation/*", "/usr/share/doc/hypatia/documentation", "644"],
  [
    "../documentation/src/*",
    "/usr/share/doc/hypatia/documentation/src",
    "644"
  ],
  ["target/release/hypatia", "/usr/bin/hypatia", "755"],
]

[dependencies]
bitvec = "1.0.1"
bytemuck.workspace = true
duration-string = "0.5.3"
error_set.workspace = true
eyre.workspace = true
facet.workspace = true
facet-kdl.workspace = true
glutin.workspace = true
image = "0.25.10"
indexmap = "2.13.0"
larpa.workspace = true
miette.workspace = true
mini-gl-bindings = { path = "../mini-gl-bindings/" }
mini-log = { path = "../mini-log/" }
mpv-gl-renderer = { path = "../mpv-gl-renderer/" }
raw-window-handle.workspace = true
rustc-hash = "2.1.1"
wayland-client.workspace = true
wayland-egl.workspace = true
wayland-protocols-wlr.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
